<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InfoActivity" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/text_move_info" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="60dp"
                android:textColor="#666"
                android:layout_height="wrap_content"
                android:text="@string/text_line11_title" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_line11_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="60dp"
                android:textColor="#666"
                android:layout_height="wrap_content"
                android:text="@string/text_line12_title" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_line12_content" />

            
            
        </TableRow>

        <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#848484" />

        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			
            <TextView
                android:id="@+id/textView2"
                android:layout_width="60dp"
                android:textColor="#666"
                android:layout_height="wrap_content"
                android:text="@string/text_line21_title" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_line21_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="60dp"
                android:textColor="#666"
                android:layout_height="wrap_content"
                android:text="@string/text_line22_title" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_line22_content" />
        </TableRow>

        <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#848484" />


        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="60dp"
                android:textColor="#666"
                android:layout_height="wrap_content"
                android:text="@string/text_line31_title" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_line31_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="60dp"
                android:textColor="#666"
                android:layout_height="wrap_content"
                android:text="@string/text_line32_title" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_line32_content" />
        </TableRow>

        <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#848484" />
        

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="60dp"
                android:textColor="#666"
                android:layout_height="wrap_content"
                android:text="@string/text_line41_title" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_line41_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="60dp"
                android:textColor="#666"
                android:layout_height="wrap_content"
                android:text="@string/text_line42_title" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_line42_content" />
        </TableRow>

        <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/line_shape" />
       
    </TableLayout>

</LinearLayout>